--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -23,6 +23,7 @@
                                 {% if product.image_url %}
                                   <img src='{{ product.image_url }}' alt="{{ product.title }}" style="width:100%">
                                 {% else %}
+                                <!-- just boilerplate image -->
                                   <img src="https://demofree.sirv.com/nope-not-here.jpg">
                                 {% endif %}                    
                                 </a> 
